--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -1,5 +1,4 @@
-.normal {
-
+.app {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -9,39 +8,10 @@
     margin: 0px;
     overflow: auto;
 
-    background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-    0 25px 50px 0 rgba(0, 0, 0, 0.1);
-}
-
-.normal input::-webkit-input-placeholder {
-    font-style: italic;
+    background: #fdfdfd;
+    font-family: 'Roboto', sans-serif;
+    font-size: 23px;
+    line-height: 31px;
     font-weight: 300;
-    color: #e6e6e6;
-}
-
-.normal input::-moz-placeholder {
-    font-style: italic;
-    font-weight: 300;
-    color: #e6e6e6;
-}
-
-.normal input::input-placeholder {
-    font-style: italic;
-    font-weight: 300;
-    color: #e6e6e6;
-}
-
-.normal h1 {
-    position: absolute;
-    top: -155px;
-    width: 100%;
-    font-size: 100px;
-    font-weight: 100;
-    text-align: center;
-    color: rgba(175, 47, 47, 0.15);
-    -webkit-text-rendering: optimizeLegibility;
-    -moz-text-rendering: optimizeLegibility;
-    -ms-text-rendering: optimizeLegibility;
-    text-rendering: optimizeLegibility;
+    color: rgba(49, 49, 49, .71);
 }
