--- a/chrome/views/popup.jade
+++ b/chrome/views/popup.jade
@@ -3,5 +3,6 @@ doctype html
 html
   head
     meta(charset='UTF-8')
+    link(href='https://fonts.googleapis.com/css?family=Roboto:400,700',rel='stylesheet',type='text/css')
   body
     script(src='/js/open.bundle.js')
