--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -9,7 +9,7 @@
     overflow: auto;
 
     background: #fdfdfd;
-    font-family: 'Roboto', sans-serif;
+    font-family: Verdana, sans-serif;
     font-size: 23px;
     line-height: 31px;
     font-weight: 300;
