--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -13,5 +13,5 @@
     font-size: 23px;
     line-height: 31px;
     font-weight: 300;
-    color: rgba(49, 49, 49, .71);
+    color: rgba(49, 49, 49);
 }
