--- a/app/components/Article.css
+++ b/app/components/Article.css
@@ -7,7 +7,7 @@
     font-size: 46px;
     line-height: 55px;
     font-weight: 700;
-    color: rgba(34, 34, 34, .71);
+    color: rgba(34, 34, 34);
     padding: 5px 0px;
     margin-bottom: 15px;
 }
