--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -1,6 +1,10 @@
 .header {
     border-bottom: 1px solid #333;
     box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    background-color: inherit;
 }
 
 .wrapper {
