--- a/app/components/Article/Article.css
+++ b/app/components/Article/Article.css
@@ -3,22 +3,95 @@
     margin: 0 auto;
     padding: 5px 10px;
     margin-top: 43px;
+    text-align: left;
 }
 
 .article .title {
-    font-size: 46px;
-    line-height: 55px;
     font-weight: 700;
-    color: rgba(34, 34, 34);
+    color: rgb(34, 34, 34);
     padding: 5px 0px;
     margin-bottom: 15px;
+}
+
+.article * {
+    max-width: 100%;
+}
+
+.article h1,
+.article h2,
+.article h3 {
+    color: #222222;
+}
+
+.article h1 {
+    font-size: 36px;
+    line-height: 43px;
+}
+
+.article h2 {
+    font-size: 28px;
+    line-height: 34px;
+}
+
+.article h3 {
+    font-size: 20px;
+    line-height: 34px;
+}
+
+.article article {
+    text-align: left;
+}
+
+.article a {
+    color: #4183c4 !important;
+    text-decoration: none;
+}
+
+.article a:visited {
+    color: #4183c4 !important;
+}
+
+.article a:hover {
+    text-decoration: underline;
+}
+
+.article blockquote {
+    padding: 0 15px;
+    border-left: 4px solid #ddd;
+    margin: 0px;
+    color: #777;
+}
+
+.article article {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    background: inherit;
+}
+
+.article pre {
+    background: none;
+    border: none;
+}
+
+.article code {
+    background: #fafafa;
+    border: 1px solid #f0f0f0;
+    padding: 5px;
+    display: block;
+}
+
+.article li code,
+.article p code {
+    padding: 0px;
+    display: inline-block;
 }
 
 .article p,
 .article ul {
     margin-bottom: 22px;
-    line-height: 33px;
-    font-size: 22px;
+    line-height: 24px;
+    font-size: 16px;
 }
 
 .article img {
@@ -28,4 +101,12 @@
 .article ul {
     list-style-type: disc;
     padding-left: 25px;
+}
+
+.article li {
+    margin-bottom: 5px;
+}
+
+.article hr {
+    display: none;
 }
